--- a/SQL/Jupyter SQL Basics.ipynb
+++ b/SQL/Jupyter SQL Basics.ipynb
@@ -946,9 +946,114 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "03e80168",
+   "metadata": {},
+   "source": [
+    "# Create or Replace Table\n",
+    "\n",
+    "This is a way around having to restart the kernel when you change a cell that builds a table.\n",
+    "\n",
+    "You can __rerun this cell__ as many times as you want."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "b95b0bac",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<span style=\"None\">Running query in &#x27;duckdb://&#x27;</span>"
+      ],
+      "text/plain": [
+       "Running query in 'duckdb://'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>Count</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "+-------+\n",
+       "| Count |\n",
+       "+-------+\n",
+       "+-------+"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "\n",
+    "CREATE OR REPLACE TABLE employees (\n",
+    "    id INT PRIMARY KEY,\n",
+    "    name VARCHAR(100),\n",
+    "    age INT,\n",
+    "    salary DECIMAL(10, 2)\n",
+    ");"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "90388f5e",
+   "metadata": {},
+   "source": [
+    "# Summary of Steps Needed to Make an AI-Generated Notebook Work\n",
+    "\n",
+    "1. Add the preamble in a code cell at the top:\n",
+    "```\n",
+    "%load_ext sql\n",
+    "%sql duckdb://\n",
+    "```\n",
+    "\n",
+    "1. Remove any comments that aren't at the end of lines.\n",
+    "1. Add `OR REPLACE` to `CREATE TABLE` statements so cells can be rerun.\n",
+    "1. Split cells (with __ctrl-shift-minus__) so that select statements are isolated from each other and everything else.\n",
+    "1. Add `%%sql` (for whole cell) or `%sql` (for single line) to make code cells into sql code"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0763c4d0",
+   "metadata": {},
+   "source": [
+    "# ToDo (and consider adding to Outline Template)\n",
+    "\n",
+    "1. NULL and nullability checks\n",
+    "1. case sensitivity of table names, functions, etc.\n",
+    "1. order by with primary and secondary order?\n",
+    "1. group by with primary and secondary grouping?\n",
+    "1. exact syntax and statement structure and order of operations\n",
+    "1. NoSQL\n",
+    "1. casting (eg. string to date)\n",
+    "1. select/case/when\n",
+    "1. if/else/endif\n",
+    "1. DROP ... IF EXSISTS\n",
+    "1. Remove all extra \"explanation:\" from markdown cells"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e8dfdb35",
+   "id": "bfa6fe10",
    "metadata": {},
    "outputs": [],
    "source": []
