--- a/SQL/Language-Specific Features.ipynb
+++ b/SQL/Language-Specific Features.ipynb
@@ -1,6 +1,27 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "5975aaf6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext sql\n",
+    "%sql duckdb://"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "685247ce",
+   "metadata": {},
+   "source": [
+    "# About This Notebook\n",
+    "\n",
+    "Since this syntax doesn't work with JupySQL/DuckDB, I didn't bother fixing or testing all of it.  It's left here for reference."
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "fbc593c2",
    "metadata": {},
@@ -15,25 +36,132 @@
     "4. Next, a stored function named \"calculate_average_salary\" is created using the `CREATE FUNCTION` statement. This function calculates the average salary of all employees in the \"employees\" table and returns the result.\n",
     "5. The stored function is called using the `SET` statement to assign the result to a variable (@avg_salary). The variable is then selected to print the average salary.\n",
     "\n",
-    "The usage of stored procedures and functions in SQL allows for encapsulating reusable logic and performing complex operations within the database itself. They can be called from SQL statements or other stored procedures/functions, providing modularity and code organization."
+    "The usage of stored procedures and functions in SQL allows for encapsulating reusable logic and performing complex operations within the database itself. They can be called from SQL statements or other stored procedures/functions, providing modularity and code organization.\n",
+    "\n",
+    "NOTE: stored procedures and functions are created __into whatever DB__ you are connected to (the one where tables get created when you do that).\n",
+    "\n",
+    "NOTE: stored procedures represent actions (eg. maintenance) while functions return values."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "78aa60d0",
+   "execution_count": 2,
+   "id": "c5d4a521",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<span style=\"None\">Running query in &#x27;duckdb://&#x27;</span>"
+      ],
+      "text/plain": [
+       "Running query in 'duckdb://'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>Count</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "+-------+\n",
+       "| Count |\n",
+       "+-------+\n",
+       "+-------+"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "-- Create a sample table\n",
+    "%%sql\n",
+    "\n",
     "CREATE TABLE employees (\n",
     "    id INT PRIMARY KEY,\n",
     "    name VARCHAR(100),\n",
     "    age INT,\n",
     "    salary DECIMAL(10, 2)\n",
-    ");\n",
+    ");"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a5d8bd08",
+   "metadata": {},
+   "source": [
+    "## Syntax\n",
     "\n",
-    "-- Create a stored procedure to insert a new employee\n",
+    "- `DELIMITER` is used to change the end of statement from `;` to `//` temporarily\n",
+    "- then a procedure is created to allow for inserting values into the table\n",
+    "- then the delimiter is changed back\n",
+    "\n",
+    "NOTE: This won't run in this notebook because it's only in limited variants of SQL."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "1839f797",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<span style=\"None\">Running query in &#x27;duckdb://&#x27;</span>"
+      ],
+      "text/plain": [
+       "Running query in 'duckdb://'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "RuntimeError: If using snippets, you may pass the --with argument explicitly.\n",
+      "For more details please refer: https://jupysql.ploomber.io/en/latest/compose.html#with-argument\n",
+      "\n",
+      "\n",
+      "Original error message from DB driver:\n",
+      "(duckdb.ParserException) Parser Error: syntax error at or near \"DELIMITER\"\n",
+      "LINE 1: DELIMITER //\n",
+      "        ^\n",
+      "[SQL: DELIMITER //\n",
+      "CREATE PROCEDURE insert_employee(\n",
+      "    IN employee_id INT,\n",
+      "    IN employee_name VARCHAR(100),\n",
+      "    IN employee_age INT,\n",
+      "    IN employee_salary DECIMAL(10, 2)\n",
+      ")\n",
+      "BEGIN\n",
+      "    INSERT INTO employees (id, name, age, salary)\n",
+      "    VALUES (employee_id, employee_name, employee_age, employee_salary);\n",
+      "END //\n",
+      "DELIMITER ;]\n",
+      "(Background on this error at: https://sqlalche.me/e/20/f405)\n",
+      "\n",
+      "If you need help solving this issue, send us a message: https://ploomber.io/community\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "\n",
     "DELIMITER //\n",
     "CREATE PROCEDURE insert_employee(\n",
     "    IN employee_id INT,\n",
@@ -45,11 +173,58 @@
     "    INSERT INTO employees (id, name, age, salary)\n",
     "    VALUES (employee_id, employee_name, employee_age, employee_salary);\n",
     "END //\n",
-    "DELIMITER ;\n",
+    "DELIMITER ;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "f22037c9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<span style=\"None\">Running query in &#x27;duckdb://&#x27;</span>"
+      ],
+      "text/plain": [
+       "Running query in 'duckdb://'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "RuntimeError: If using snippets, you may pass the --with argument explicitly.\n",
+      "For more details please refer: https://jupysql.ploomber.io/en/latest/compose.html#with-argument\n",
+      "\n",
+      "\n",
+      "Original error message from DB driver:\n",
+      "(duckdb.CatalogException) Catalog Error: Table Function with name insert_employee does not exist!\n",
+      "Did you mean \"repeat\"?\n",
+      "[SQL: CALL insert_employee(1, 'John Doe', 30, 5000.00);]\n",
+      "(Background on this error at: https://sqlalche.me/e/20/f405)\n",
+      "\n",
+      "If you need help solving this issue, send us a message: https://ploomber.io/community\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%sql\n",
     "\n",
-    "-- Call the stored procedure to insert a new employee\n",
-    "CALL insert_employee(1, 'John Doe', 30, 5000.00);\n",
-    "\n",
+    "CALL insert_employee(1, 'John Doe', 30, 5000.00);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "78aa60d0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "-- Create a stored function to calculate the average salary of employees\n",
     "DELIMITER //\n",
     "CREATE FUNCTION calculate_average_salary()\n",
@@ -301,6 +476,18 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
