--- a/SQL/Table Management.ipynb
+++ b/SQL/Table Management.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "1baffebf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext sql\n",
+    "%sql duckdb://"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "51eb1cd9",
    "metadata": {},
@@ -24,20 +35,114 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "62034a52",
+   "cell_type": "markdown",
+   "id": "aa4bc21d",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "-- Creating a permanent table in SQL\n",
+    "## Creating Database\n",
     "\n",
-    "-- Create a new database\n",
+    "Doesn't work here, but good to know.  You can create a new DB and switch to it so that future operations will go there."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "8e08918c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<span style=\"None\">Running query in &#x27;duckdb://&#x27;</span>"
+      ],
+      "text/plain": [
+       "Running query in 'duckdb://'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "RuntimeError: If using snippets, you may pass the --with argument explicitly.\n",
+      "For more details please refer: https://jupysql.ploomber.io/en/latest/compose.html#with-argument\n",
+      "\n",
+      "\n",
+      "Original error message from DB driver:\n",
+      "(duckdb.ParserException) Parser Error: syntax error at or near \"DATABASE\"\n",
+      "LINE 1: CREATE DATABASE mydatabase;\n",
+      "               ^\n",
+      "[SQL: CREATE DATABASE mydatabase;]\n",
+      "(Background on this error at: https://sqlalche.me/e/20/f405)\n",
+      "\n",
+      "If you need help solving this issue, send us a message: https://ploomber.io/community\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "\n",
     "CREATE DATABASE mydatabase;\n",
-    "USE mydatabase;\n",
+    "USE mydatabase;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3d443abb",
+   "metadata": {},
+   "source": [
+    "## Creating a Table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "93cc8ad4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<span style=\"None\">Running query in &#x27;duckdb://&#x27;</span>"
+      ],
+      "text/plain": [
+       "Running query in 'duckdb://'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>Count</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "+-------+\n",
+       "| Count |\n",
+       "+-------+\n",
+       "+-------+"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
     "\n",
-    "-- Create a new table with columns and data types\n",
-    "CREATE TABLE employees (\n",
+    "CREATE OR REPLACE TABLE employees (\n",
     "    id INT PRIMARY KEY,\n",
     "    name VARCHAR(50),\n",
     "    age INT,\n",
@@ -48,29 +153,174 @@
     "INSERT INTO employees (id, name, age, salary)\n",
     "VALUES (1, 'John Doe', 30, 50000.00),\n",
     "       (2, 'Jane Smith', 35, 60000.00),\n",
-    "       (3, 'Mike Johnson', 25, 45000.00);\n",
+    "       (3, 'Mike Johnson', 25, 45000.00);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "164c6218",
+   "metadata": {},
+   "source": [
+    "## Modify the Table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "b14ca345",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<span style=\"None\">Running query in &#x27;duckdb://&#x27;</span>"
+      ],
+      "text/plain": [
+       "Running query in 'duckdb://'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>Count</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "+-------+\n",
+       "| Count |\n",
+       "+-------+\n",
+       "+-------+"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
     "\n",
-    "-- Retrieve all data from the table\n",
-    "SELECT * FROM employees;\n",
-    "\n",
-    "-- Update data in the table\n",
     "UPDATE employees\n",
     "SET salary = 55000.00\n",
     "WHERE id = 1;\n",
     "\n",
-    "-- Delete data from the table\n",
     "DELETE FROM employees\n",
-    "WHERE id = 3;\n",
-    "\n",
-    "-- Retrieve specific data from the table\n",
-    "SELECT name, age\n",
-    "FROM employees\n",
-    "WHERE salary > 55000.00;\n",
-    "\n",
-    "-- Drop the table\n",
-    "DROP TABLE employees;\n",
-    "\n",
-    "-- Drop the database\n",
+    "WHERE id = 3;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2cc980a4",
+   "metadata": {},
+   "source": [
+    "## Delete the Table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "7365c988",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<span style=\"None\">Running query in &#x27;duckdb://&#x27;</span>"
+      ],
+      "text/plain": [
+       "Running query in 'duckdb://'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>Success</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "+---------+\n",
+       "| Success |\n",
+       "+---------+\n",
+       "+---------+"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "DROP TABLE employees;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e9a99d54",
+   "metadata": {},
+   "source": [
+    "## Delete the Database"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "62034a52",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<span style=\"None\">Running query in &#x27;duckdb://&#x27;</span>"
+      ],
+      "text/plain": [
+       "Running query in 'duckdb://'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "RuntimeError: If using snippets, you may pass the --with argument explicitly.\n",
+      "For more details please refer: https://jupysql.ploomber.io/en/latest/compose.html#with-argument\n",
+      "\n",
+      "\n",
+      "Original error message from DB driver:\n",
+      "(duckdb.ParserException) Parser Error: syntax error at or near \"DATABASE\"\n",
+      "LINE 1: DROP DATABASE mydatabase;\n",
+      "             ^\n",
+      "[SQL: DROP DATABASE mydatabase;]\n",
+      "(Background on this error at: https://sqlalche.me/e/20/f405)\n",
+      "\n",
+      "If you need help solving this issue, send us a message: https://ploomber.io/community\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%sql\n",
     "DROP DATABASE mydatabase;"
    ]
   },
@@ -86,59 +336,157 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c0afb208",
+   "execution_count": 8,
+   "id": "f54120c9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<span style=\"None\">Running query in &#x27;duckdb://&#x27;</span>"
+      ],
+      "text/plain": [
+       "Running query in 'duckdb://'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>Count</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "+-------+\n",
+       "| Count |\n",
+       "+-------+\n",
+       "+-------+"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "-- Creating a temporary table in SQL\n",
+    "%%sql\n",
     "\n",
-    "-- Create a temporary table with a single column\n",
     "CREATE TEMPORARY TABLE temp_table (\n",
-    "    id INT\n",
-    ");\n",
-    "\n",
-    "-- Insert data into the temporary table\n",
-    "INSERT INTO temp_table (id) VALUES (1), (2), (3);\n",
-    "\n",
-    "-- Select all rows from the temporary table\n",
-    "SELECT * FROM temp_table;\n",
-    "-- Expected output: \n",
-    "-- id\n",
-    "-- 1\n",
-    "-- 2\n",
-    "-- 3\n",
-    "\n",
-    "-- Create a temporary table with multiple columns\n",
-    "CREATE TEMPORARY TABLE temp_table2 (\n",
     "    id INT,\n",
     "    name VARCHAR(50)\n",
     ");\n",
     "\n",
     "-- Insert data into the temporary table\n",
-    "INSERT INTO temp_table2 (id, name) VALUES (1, 'John'), (2, 'Jane'), (3, 'Alice');\n",
+    "INSERT INTO temp_table (id, name) VALUES (1, 'John'), (2, 'Jane'), (3, 'Alice');"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "e80414c2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<span style=\"None\">Running query in &#x27;duckdb://&#x27;</span>"
+      ],
+      "text/plain": [
+       "Running query in 'duckdb://'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>Count</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "+-------+\n",
+       "| Count |\n",
+       "+-------+\n",
+       "+-------+"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
     "\n",
-    "-- Select all rows from the temporary table\n",
-    "SELECT * FROM temp_table2;\n",
-    "-- Expected output: \n",
-    "-- id | name\n",
-    "-- 1  | John\n",
-    "-- 2  | Jane\n",
-    "-- 3  | Alice\n",
+    "CREATE TEMPORARY TABLE temp_table2 AS\n",
+    "SELECT * FROM temp_table;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "c0afb208",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<span style=\"None\">Running query in &#x27;duckdb://&#x27;</span>"
+      ],
+      "text/plain": [
+       "Running query in 'duckdb://'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>Success</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "+---------+\n",
+       "| Success |\n",
+       "+---------+\n",
+       "+---------+"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
     "\n",
-    "-- Create a temporary table with the structure of an existing table\n",
-    "CREATE TEMPORARY TABLE temp_table3 AS\n",
-    "SELECT * FROM existing_table WHERE condition;\n",
-    "\n",
-    "-- Select all rows from the temporary table\n",
-    "SELECT * FROM temp_table3;\n",
-    "-- Expected output: \n",
-    "-- Same as the result of the SELECT statement used to create temp_table3\n",
-    "\n",
-    "-- Drop the temporary tables when they are no longer needed\n",
-    "DROP TEMPORARY TABLE temp_table;\n",
-    "DROP TEMPORARY TABLE temp_table2;\n",
-    "DROP TEMPORARY TABLE temp_table3;"
+    "DROP TABLE temp_table;\n",
+    "DROP TABLE temp_table2;"
    ]
   },
   {
@@ -147,56 +495,199 @@
    "metadata": {},
    "source": [
     "# Cloning Tables\n",
-    "Explanation:\n",
-    "In SQL, you can clone a table by using the `SELECT INTO` statement. This statement allows you to create a new table with the same structure and data as an existing table.\n",
     "\n",
-    "In the code snippet above, we first create a table called `employees` with columns `id`, `name`, `age`, and `salary`. Then, we insert some sample data into the `employees` table.\n",
-    "\n",
-    "To clone the `employees` table, we use the `SELECT INTO` statement. This statement selects all the data from the `employees` table and creates a new table called `employees_clone` with the same structure and data.\n",
-    "\n",
-    "Finally, we display the cloned table by selecting all the rows from the `employees_clone` table.\n",
-    "\n",
-    "Expected output:\n",
-    "```\n",
-    "id |     name     | age | salary\n",
-    "---+--------------+-----+--------\n",
-    "1  | John Doe     | 30  | 50000.00\n",
-    "2  | Jane Smith   | 35  | 60000.00\n",
-    "3  | Mike Johnson | 40  | 70000.00\n",
-    "```\n",
-    "\n",
-    "The `employees_clone` table will have the same structure and data as the `employees` table. Cloning tables can be useful when you want to create a backup or make a copy of an existing table for further analysis or modifications without affecting the original table."
+    "Cloning tables can be useful when you want to create a backup or make a copy of an existing table for further analysis or modifications without affecting the original table."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b3a90dd0",
+   "execution_count": 16,
+   "id": "f2054a1f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<span style=\"None\">Running query in &#x27;duckdb://&#x27;</span>"
+      ],
+      "text/plain": [
+       "Running query in 'duckdb://'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>Count</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "+-------+\n",
+       "| Count |\n",
+       "+-------+\n",
+       "+-------+"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "-- Create a table\n",
-    "CREATE TABLE employees (\n",
+    "%%sql\n",
+    "\n",
+    "CREATE OR REPLACE TABLE employees (\n",
     "    id INT PRIMARY KEY,\n",
     "    name VARCHAR(100),\n",
     "    age INT,\n",
     "    salary DECIMAL(10, 2)\n",
     ");\n",
     "\n",
-    "-- Insert data into the table\n",
     "INSERT INTO employees (id, name, age, salary)\n",
     "VALUES (1, 'John Doe', 30, 50000),\n",
     "       (2, 'Jane Smith', 35, 60000),\n",
-    "       (3, 'Mike Johnson', 40, 70000);\n",
+    "       (3, 'Mike Johnson', 40, 70000);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "a6f4834b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<span style=\"None\">Running query in &#x27;duckdb://&#x27;</span>"
+      ],
+      "text/plain": [
+       "Running query in 'duckdb://'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>Count</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "+-------+\n",
+       "| Count |\n",
+       "+-------+\n",
+       "+-------+"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
     "\n",
-    "-- Clone a table using SELECT INTO statement\n",
-    "SELECT *\n",
-    "INTO employees_clone\n",
-    "FROM employees;\n",
+    "CREATE OR REPLACE TABLE employees_clone AS\n",
+    "    SELECT * FROM employees;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "55f44574",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<span style=\"None\">Running query in &#x27;duckdb://&#x27;</span>"
+      ],
+      "text/plain": [
+       "Running query in 'duckdb://'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>id</th>\n",
+       "            <th>name</th>\n",
+       "            <th>age</th>\n",
+       "            <th>salary</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>1</td>\n",
+       "            <td>John Doe</td>\n",
+       "            <td>30</td>\n",
+       "            <td>50000.00</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>2</td>\n",
+       "            <td>Jane Smith</td>\n",
+       "            <td>35</td>\n",
+       "            <td>60000.00</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>3</td>\n",
+       "            <td>Mike Johnson</td>\n",
+       "            <td>40</td>\n",
+       "            <td>70000.00</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "+----+--------------+-----+----------+\n",
+       "| id |     name     | age |  salary  |\n",
+       "+----+--------------+-----+----------+\n",
+       "| 1  |   John Doe   |  30 | 50000.00 |\n",
+       "| 2  |  Jane Smith  |  35 | 60000.00 |\n",
+       "| 3  | Mike Johnson |  40 | 70000.00 |\n",
+       "+----+--------------+-----+----------+"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
     "\n",
-    "-- Display the cloned table\n",
     "SELECT * FROM employees_clone;"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a9fbb15c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -204,6 +695,18 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
