--- a/SQL/Transactions and Concurrency Control.ipynb
+++ b/SQL/Transactions and Concurrency Control.ipynb
@@ -1,6 +1,27 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "cffa9561",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext sql\n",
+    "%sql duckdb://"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5465eff6",
+   "metadata": {},
+   "source": [
+    "# About This Notebook\n",
+    "\n",
+    "Because JupySQL doesn't support transactions, these examples (AI-generated) are left here unaltered except for the slight changes I made at the beginning to find out that transactions aren't supported."
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "9e213e2a",
    "metadata": {},
@@ -24,12 +45,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e58bbe47",
+   "execution_count": 2,
+   "id": "aa0d2a90",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<span style=\"None\">Running query in &#x27;duckdb://&#x27;</span>"
+      ],
+      "text/plain": [
+       "Running query in 'duckdb://'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>Count</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "+-------+\n",
+       "| Count |\n",
+       "+-------+\n",
+       "+-------+"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "-- Create a table to store bank transactions\n",
+    "%%sql\n",
+    "\n",
     "CREATE TABLE transactions (\n",
     "    id INT PRIMARY KEY,\n",
     "    account_number INT,\n",
@@ -37,15 +96,52 @@
     "    transaction_date DATE\n",
     ");\n",
     "\n",
-    "-- Insert sample data into the table\n",
     "INSERT INTO transactions (id, account_number, amount, transaction_date)\n",
     "VALUES (1, 123456, 100.00, '2022-01-01'),\n",
     "       (2, 123456, -50.00, '2022-01-02'),\n",
-    "       (3, 789012, 200.00, '2022-01-03');\n",
+    "       (3, 789012, 200.00, '2022-01-03');"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "c2c76391",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<span style=\"None\">Running query in &#x27;duckdb://&#x27;</span>"
+      ],
+      "text/plain": [
+       "Running query in 'duckdb://'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "RuntimeError: JupySQL does not support transactions\n",
+      "If you need help solving this issue, send us a message: https://ploomber.io/community\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%sql\n",
     "\n",
-    "-- Start a transaction\n",
-    "BEGIN TRANSACTION;\n",
-    "\n",
+    "BEGIN TRANSACTION;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e58bbe47",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "-- Update the balance for account number 123456\n",
     "UPDATE transactions\n",
     "SET amount = amount + 50.00\n",
@@ -172,6 +268,18 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
