--- a/SQL/3rd Party Libraries.ipynb
+++ b/SQL/3rd Party Libraries.ipynb
@@ -2,6 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "8374e044",
+   "metadata": {},
+   "source": [
+    "# About This Notebook\n",
+    "\n",
+    "Since these examples aren't all in Python and require external libraries, they won't run in this notebook.  Thus, the accuracy may not be perfect since it's AI-generated and untested.  They are included here for ideas of what may be out there."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "2f1d1d75",
    "metadata": {},
    "source": [
@@ -253,6 +263,18 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
