--- a/SQL/Database Design.ipynb
+++ b/SQL/Database Design.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "097b7c80",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext sql\n",
+    "%sql duckdb://"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "689a7a31",
    "metadata": {},
@@ -25,22 +36,69 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "08ec16d5",
+   "cell_type": "markdown",
+   "id": "c11e686c",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "-- Create a table to demonstrate normalization\n",
-    "CREATE TABLE Customers (\n",
+    "## Creating Normalized Data\n",
+    "\n",
+    "Note the lack of redundancy other than for foreign keys to point into other tables.  Also note the large amount of tables."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "a45aa9c1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<span style=\"None\">Running query in &#x27;duckdb://&#x27;</span>"
+      ],
+      "text/plain": [
+       "Running query in 'duckdb://'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>Count</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "+-------+\n",
+       "| Count |\n",
+       "+-------+\n",
+       "+-------+"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "\n",
+    "CREATE OR REPLACE TABLE Customers (\n",
     "    customer_id INT PRIMARY KEY,\n",
     "    customer_name VARCHAR(50),\n",
     "    customer_email VARCHAR(50),\n",
     "    customer_phone VARCHAR(15)\n",
     ");\n",
     "\n",
-    "-- Create a table to demonstrate first normal form (1NF)\n",
-    "CREATE TABLE Orders (\n",
+    "CREATE OR REPLACE TABLE Orders (\n",
     "    order_id INT PRIMARY KEY,\n",
     "    customer_id INT,\n",
     "    order_date DATE,\n",
@@ -48,8 +106,21 @@
     "    FOREIGN KEY (customer_id) REFERENCES Customers(customer_id)\n",
     ");\n",
     "\n",
-    "-- Create a table to demonstrate second normal form (2NF)\n",
-    "CREATE TABLE OrderItems (\n",
+    "CREATE OR REPLACE TABLE Categories (\n",
+    "    category_id INT PRIMARY KEY,\n",
+    "    category_name VARCHAR(50),\n",
+    "    category_description TEXT\n",
+    ");\n",
+    "\n",
+    "CREATE OR REPLACE TABLE Products (\n",
+    "    product_id INT PRIMARY KEY,\n",
+    "    product_name VARCHAR(50),\n",
+    "    category_id INT,\n",
+    "    category_name VARCHAR(50),\n",
+    "    FOREIGN KEY (category_id) REFERENCES Categories(category_id)\n",
+    ");\n",
+    "\n",
+    "CREATE OR REPLACE TABLE OrderItems (\n",
     "    order_item_id INT PRIMARY KEY,\n",
     "    order_id INT,\n",
     "    product_id INT,\n",
@@ -59,39 +130,94 @@
     "    FOREIGN KEY (product_id) REFERENCES Products(product_id)\n",
     ");\n",
     "\n",
-    "-- Create a table to demonstrate third normal form (3NF)\n",
-    "CREATE TABLE Products (\n",
-    "    product_id INT PRIMARY KEY,\n",
-    "    product_name VARCHAR(50),\n",
-    "    category_id INT,\n",
-    "    category_name VARCHAR(50),\n",
-    "    FOREIGN KEY (category_id) REFERENCES Categories(category_id)\n",
-    ");\n",
-    "\n",
-    "-- Create a table to demonstrate fourth normal form (4NF)\n",
-    "CREATE TABLE Categories (\n",
-    "    category_id INT PRIMARY KEY,\n",
-    "    category_name VARCHAR(50),\n",
-    "    category_description TEXT\n",
-    ");\n",
-    "\n",
-    "-- Insert sample data into the tables\n",
     "INSERT INTO Customers (customer_id, customer_name, customer_email, customer_phone)\n",
     "VALUES (1, 'John Doe', 'john.doe@example.com', '123-456-7890');\n",
     "\n",
     "INSERT INTO Orders (order_id, customer_id, order_date, order_total)\n",
     "VALUES (1, 1, '2022-01-01', 100.00);\n",
     "\n",
-    "INSERT INTO OrderItems (order_item_id, order_id, product_id, quantity, price)\n",
-    "VALUES (1, 1, 1, 2, 50.00);\n",
+    "INSERT INTO Categories (category_id, category_name, category_description)\n",
+    "VALUES (1, 'Category A', 'Description of Category A');\n",
     "\n",
     "INSERT INTO Products (product_id, product_name, category_id, category_name)\n",
     "VALUES (1, 'Product A', 1, 'Category A');\n",
     "\n",
-    "INSERT INTO Categories (category_id, category_name, category_description)\n",
-    "VALUES (1, 'Category A', 'Description of Category A');\n",
+    "INSERT INTO OrderItems (order_item_id, order_id, product_id, quantity, price)\n",
+    "VALUES (1, 1, 1, 2, 50.00);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b38e3451",
+   "metadata": {},
+   "source": [
+    "## Querying\n",
     "\n",
-    "-- Query to retrieve customer information along with their orders and order items\n",
+    "Note the large amount of joining and table aliasing."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "08ec16d5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<span style=\"None\">Running query in &#x27;duckdb://&#x27;</span>"
+      ],
+      "text/plain": [
+       "Running query in 'duckdb://'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>customer_name</th>\n",
+       "            <th>order_id</th>\n",
+       "            <th>order_date</th>\n",
+       "            <th>order_item_id</th>\n",
+       "            <th>product_name</th>\n",
+       "            <th>quantity</th>\n",
+       "            <th>price</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>John Doe</td>\n",
+       "            <td>1</td>\n",
+       "            <td>2022-01-01</td>\n",
+       "            <td>1</td>\n",
+       "            <td>Product A</td>\n",
+       "            <td>2</td>\n",
+       "            <td>50.00</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "+---------------+----------+------------+---------------+--------------+----------+-------+\n",
+       "| customer_name | order_id | order_date | order_item_id | product_name | quantity | price |\n",
+       "+---------------+----------+------------+---------------+--------------+----------+-------+\n",
+       "|    John Doe   |    1     | 2022-01-01 |       1       |  Product A   |    2     | 50.00 |\n",
+       "+---------------+----------+------------+---------------+--------------+----------+-------+"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "\n",
     "SELECT\n",
     "    c.customer_name,\n",
     "    o.order_id,\n",
@@ -113,78 +239,19 @@
    "metadata": {},
    "source": [
     "# Denormalization\n",
-    "Explanation:\n",
-    "In this code snippet, we demonstrate the concept of denormalization in database design using SQL. Denormalization is the process of combining normalized tables into a single table to improve query performance by reducing the number of joins required.\n",
     "\n",
-    "We start by creating three tables: `customers`, `orders`, and `order_items`. The `customers` table stores customer information, the `orders` table stores order information, and the `order_items` table stores order item details.\n",
+    "Denormalization means having tables with a lot of redundancy instead of foreign keys into other tables (eg. same customer 50 times because they have 50 orders).  It is as if you did a `JOIN` on normalized tables.\n",
     "\n",
-    "To demonstrate denormalization, we denormalize the tables by combining the necessary information into a single query. The query retrieves order details along with customer information by joining the `orders`, `customers`, and `order_items` tables.\n",
-    "\n",
-    "The result of the query will include columns from all three tables, providing a denormalized view of the data. This denormalized structure eliminates the need for multiple joins when querying the data, improving performance.\n",
-    "\n",
-    "Expected Output:\n",
-    "```\n",
-    "order_id | first_name | last_name | order_date  | total_amount | product_name | quantity | price\n",
-    "---------|------------|-----------|-------------|--------------|--------------|----------|-------\n",
-    "1        | John       | Doe       | 2022-01-01  | 100.00       | Product A    | 2        | 50.00\n",
-    "1        | John       | Doe       | 2022-01-01  | 100.00       | Product B    | 1        | 25.00\n",
-    "```\n",
-    "\n",
-    "The output displays the denormalized result of the query, combining order details with customer information. Each row represents an order item, with the corresponding customer information repeated for each item."
+    "Some applications need to store data this way for reasons such as performance, maintenance, etc."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "564ffd49",
+   "id": "0783f4e2",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "-- Create a table for storing customer information\n",
-    "CREATE TABLE customers (\n",
-    "    customer_id INT PRIMARY KEY,\n",
-    "    first_name VARCHAR(50),\n",
-    "    last_name VARCHAR(50),\n",
-    "    email VARCHAR(100),\n",
-    "    phone_number VARCHAR(20)\n",
-    ");\n",
-    "\n",
-    "-- Create a table for storing order information\n",
-    "CREATE TABLE orders (\n",
-    "    order_id INT PRIMARY KEY,\n",
-    "    customer_id INT,\n",
-    "    order_date DATE,\n",
-    "    total_amount DECIMAL(10, 2),\n",
-    "    FOREIGN KEY (customer_id) REFERENCES customers(customer_id)\n",
-    ");\n",
-    "\n",
-    "-- Create a table for storing order items\n",
-    "CREATE TABLE order_items (\n",
-    "    order_item_id INT PRIMARY KEY,\n",
-    "    order_id INT,\n",
-    "    product_name VARCHAR(100),\n",
-    "    quantity INT,\n",
-    "    price DECIMAL(10, 2),\n",
-    "    FOREIGN KEY (order_id) REFERENCES orders(order_id)\n",
-    ");\n",
-    "\n",
-    "-- Insert sample data into the tables\n",
-    "INSERT INTO customers (customer_id, first_name, last_name, email, phone_number)\n",
-    "VALUES (1, 'John', 'Doe', 'john.doe@example.com', '123-456-7890');\n",
-    "\n",
-    "INSERT INTO orders (order_id, customer_id, order_date, total_amount)\n",
-    "VALUES (1, 1, '2022-01-01', 100.00);\n",
-    "\n",
-    "INSERT INTO order_items (order_item_id, order_id, product_name, quantity, price)\n",
-    "VALUES (1, 1, 'Product A', 2, 50.00),\n",
-    "       (2, 1, 'Product B', 1, 25.00);\n",
-    "\n",
-    "-- Query to retrieve order details with customer information\n",
-    "SELECT o.order_id, c.first_name, c.last_name, o.order_date, o.total_amount, oi.product_name, oi.quantity, oi.price\n",
-    "FROM orders o\n",
-    "JOIN customers c ON o.customer_id = c.customer_id\n",
-    "JOIN order_items oi ON o.order_id = oi.order_id;"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -192,6 +259,18 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
