--- a/SQL/Extensions and Variations of SQL.ipynb
+++ b/SQL/Extensions and Variations of SQL.ipynb
@@ -2,6 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "fcb68791",
+   "metadata": {},
+   "source": [
+    "# About This Notebook\n",
+    "\n",
+    "Since this notebook shows vendor-specific extensions, I wont' bother to try to run it."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "40d41c33",
    "metadata": {},
    "source": [
@@ -104,6 +114,18 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
