--- a/SQL/Recent Versions.ipynb
+++ b/SQL/Recent Versions.ipynb
@@ -2,6 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "0e2c0e9c",
+   "metadata": {},
+   "source": [
+    "# About This Notebook\n",
+    "\n",
+    "Left here for reference and not cleaned up since there are issues with variants of SQL, versions of JupySQL, etc."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "da0cf550",
    "metadata": {},
    "source": [
@@ -732,6 +742,24 @@
     "FROM top_earners\n",
     "WHERE rank <= 3;"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "152b9ca3",
+   "metadata": {},
+   "source": [
+    "# More Recent\n",
+    "\n",
+    "TBD"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7d560316",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -739,6 +767,18 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
