--- a/SQL/Security and Permissions.ipynb
+++ b/SQL/Security and Permissions.ipynb
@@ -1,6 +1,27 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "dfa02080",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext sql\n",
+    "%sql duckdb://"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7d52574d",
+   "metadata": {},
+   "source": [
+    "# About This Notebook\n",
+    "\n",
+    "Because the very first cell below fails in JupySQL/DuckDB, I didn't bother modifying the rest of it.  It is left here as a reference for how things might be done (subject to hallucinations by the AI that generated this)."
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "70dfe7f9",
    "metadata": {},
@@ -19,14 +40,54 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "id": "ddd165fa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<span style=\"None\">Running query in &#x27;duckdb://&#x27;</span>"
+      ],
+      "text/plain": [
+       "Running query in 'duckdb://'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "RuntimeError: If using snippets, you may pass the --with argument explicitly.\n",
+      "For more details please refer: https://jupysql.ploomber.io/en/latest/compose.html#with-argument\n",
+      "\n",
+      "\n",
+      "Original error message from DB driver:\n",
+      "(duckdb.ParserException) Parser Error: syntax error at or near \"USER\"\n",
+      "LINE 1: CREATE USER test_user;\n",
+      "               ^\n",
+      "[SQL: CREATE USER test_user;]\n",
+      "(Background on this error at: https://sqlalche.me/e/20/f405)\n",
+      "\n",
+      "If you need help solving this issue, send us a message: https://ploomber.io/community\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "\n",
+    "CREATE USER test_user;"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "5e85d653",
    "metadata": {},
    "outputs": [],
    "source": [
-    "-- Create a new user\n",
-    "CREATE USER test_user;\n",
-    "\n",
     "-- Grant SELECT permission on a table to the user\n",
     "GRANT SELECT ON table_name TO test_user;\n",
     "\n",
@@ -146,6 +207,18 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
