--- a/SQL/Views and Virtual Tables.ipynb
+++ b/SQL/Views and Virtual Tables.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "fcbd7116",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext sql\n",
+    "%sql duckdb://"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "1a773855",
    "metadata": {},
@@ -31,53 +42,133 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8feac80a",
+   "id": "8663b4b8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "-- Creating a simple view\n",
-    "CREATE VIEW employees_view AS\n",
-    "SELECT employee_id, first_name, last_name, hire_date\n",
-    "FROM employees;\n",
+    "%%sql\n",
     "\n",
-    "-- Creating a view with a WHERE clause\n",
-    "CREATE VIEW managers_view AS\n",
-    "SELECT employee_id, first_name, last_name, hire_date\n",
-    "FROM employees\n",
-    "WHERE job_title = 'Manager';\n",
+    "CREATE OR REPLACE TABLE employees (\n",
+    "    id INT PRIMARY KEY,\n",
+    "    name VARCHAR(100),\n",
+    "    age INT,\n",
+    "    salary DECIMAL(10, 2)\n",
+    ");\n",
     "\n",
-    "-- Creating a view with a JOIN\n",
-    "CREATE VIEW employee_department_view AS\n",
-    "SELECT e.employee_id, e.first_name, e.last_name, d.department_name\n",
-    "FROM employees e\n",
-    "JOIN departments d ON e.department_id = d.department_id;\n",
+    "INSERT INTO employees (id, name, age, salary)\n",
+    "VALUES (1, 'John Doe', 30, 50000.00),\n",
+    "       (2, 'Jane Smith', 25, 60000.00),\n",
+    "       (3, 'Mike Johnson', 35, 70000.00);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "959e0c60",
+   "metadata": {},
+   "source": [
+    "## Creating a View\n",
     "\n",
-    "-- Creating a view with a subquery\n",
-    "CREATE VIEW high_salary_view AS\n",
-    "SELECT employee_id, first_name, last_name, salary\n",
-    "FROM employees\n",
-    "WHERE salary > (SELECT AVG(salary) FROM employees);\n",
+    "You create a view like any query including WHERE, aliases, etc.  Then the query is stored in the database and executed when you query it."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "08cea454",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<span style=\"None\">Running query in &#x27;duckdb://&#x27;</span>"
+      ],
+      "text/plain": [
+       "Running query in 'duckdb://'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>Count</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "+-------+\n",
+       "| Count |\n",
+       "+-------+\n",
+       "+-------+"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
     "\n",
-    "-- Creating a view with column aliases\n",
-    "CREATE VIEW employee_info_view (ID, Name, HireDate) AS\n",
-    "SELECT employee_id, CONCAT(first_name, ' ', last_name), hire_date\n",
-    "FROM employees;\n",
+    "CREATE OR REPLACE VIEW employees_view AS\n",
+    "    SELECT id, name, age, salary\n",
+    "    FROM employees;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "658b2718",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<span style=\"None\">Running query in &#x27;duckdb://&#x27;</span>"
+      ],
+      "text/plain": [
+       "Running query in 'duckdb://'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>Success</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "+---------+\n",
+       "| Success |\n",
+       "+---------+\n",
+       "+---------+"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
     "\n",
-    "-- Modifying a view\n",
-    "ALTER VIEW employees_view\n",
-    "AS\n",
-    "SELECT employee_id, first_name, last_name, hire_date, salary\n",
-    "FROM employees;\n",
-    "\n",
-    "-- Dropping a view\n",
-    "DROP VIEW IF EXISTS employees_view;\n",
-    "\n",
-    "-- Querying a view\n",
-    "SELECT * FROM employees_view;\n",
-    "SELECT * FROM managers_view;\n",
-    "SELECT * FROM employee_department_view;\n",
-    "SELECT * FROM high_salary_view;\n",
-    "SELECT * FROM employee_info_view;"
+    "DROP VIEW IF EXISTS employees_view;"
    ]
   },
   {
@@ -95,7 +186,9 @@
     "\n",
     "Finally, we drop the view using the `DROP VIEW` statement. If we try to select from the dropped view, it will result in an error since the view no longer exists.\n",
     "\n",
-    "Views provide a way to simplify complex queries by encapsulating them into reusable objects. They can also be used to restrict access to certain columns or rows of a table, providing an additional layer of security."
+    "Views provide a way to simplify complex queries by encapsulating them into reusable objects. They can also be used to restrict access to certain columns or rows of a table, providing an additional layer of security.\n",
+    "\n",
+    "NOTE: I didn't bother to make this runnable because the text up here is more important than the actual code below."
    ]
   },
   {
@@ -161,6 +254,18 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
